redis/redis-primary.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-primary
  namespace: k8s-testing
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
      role: primary
      tier: backend
  template:
    metadata:
      labels:
        app: redis
        role: primary
        tier: backend
    spec:
      containers:
      - name: redis
        image: redis
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
        ports:
        - containerPort: 6379
