redis/redis-replica.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-replica
  namespace: k8s-testing
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
      role: replica
      tier: backend
  template:
    metadata:
      labels:
        app: redis
        role: replica
        tier: backend
    spec:
      containers:
      - name: replica
        image: redis
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
        ports:
        - containerPort: 6379
